fixed image display on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1619,7 +1619,7 @@ button,
     display: flex;
     margin: 0 0 3em 3em;
     position: relative;
-    width: calc(50% - 3em + 2em); } /*CG: you made a change here for your homepage!  Delete "+ 2em" if it comes back to bite you!*/
+    width: calc(50% - 3em + 8em); } /*CG: you made a change here for your homepage!  Delete "+ 2em" if it comes back to bite you!*/
     .features article:nth-child(2n - 1) {
       margin-right: 1.5em; }
     .features article:nth-child(2n) {
@@ -2281,3 +2281,24 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+/*CG: added for different mobile/desktop versions*/
+/* Default state: Show desktop, hide mobile */
+.desktop-only {
+  display: block;
+}
+
+.mobile-only {
+  display: none;
+}
+
+/* Media query for mobile screens */
+@media screen and (max-width: 767px) {
+  .desktop-only {
+      display: none !important; /* Force hiding desktop-only */
+  }
+
+  .mobile-only {
+      display: block !important; /* Force showing mobile-only */
+  }
+}
